<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pashkobohdan.fastreading.AllBooks">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_sort_by_last_open"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/sort_by_last_opening"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_sort_by_progress"
            android:orderInCategory="100"
            android:title="@string/sort_by_progress"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_sort_by_name"
            android:orderInCategory="100"
            android:title="@string/sort_by_name"
            app:showAsAction="never" />

        <!--<item-->
            <!--android:id="@+id/action_back_sort_by_name"-->
            <!--android:orderInCategory="100"-->
            <!--android:title="Back sort by name"-->
            <!--app:showAsAction="never" />-->

        <item
            android:id="@+id/action_sort_by_author"
            android:orderInCategory="100"
            android:title="@string/sort_by_author"
            app:showAsAction="never" />

        <!--<item-->
            <!--android:id="@+id/action_back_sort_by_author"-->
            <!--android:orderInCategory="100"-->
            <!--android:title="Back sort by author"-->
            <!--app:showAsAction="never" />-->

    </group>


    <item
        android:id="@+id/sign_in_or_out"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/rate_app"
        android:orderInCategory="100"
        android:title="@string/rate_this_app"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/else_by_bsapps"
        android:orderInCategory="100"
        android:title="@string/else_by_b_s_apps"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/show_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_help"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Help"-->
        <!--app:showAsAction="ifRoom" />-->


</menu>
