<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pashkobohdan.fastreading.AllBooks">


    <item
        android:id="@+id/action_to_start"
        android:orderInCategory="100"
        android:title="@string/to_start"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cancel_last_rewind"
        android:orderInCategory="100"
        android:title="@string/cancel_last_rewind"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
